--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     - primary meta tags
   -->
   <title>STSProm - Черный металлопрокат</title>
-  <meta name="title" content="Keofi - Great coffee good vibes">
-  <meta name="description" content="This is a coffee shop html template made by codewithsadee">
+  <meta name="title" content="STS Prom - rolled steel">
+  <meta name="description" content="This is a steel shop">
 
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/svg+xml">
 
   <!--
     - custom css link
@@ -95,7 +95,7 @@
       <div class="container">
 
         <a href="#" class="logo">
-          <h2>STS Prom</h2>
+          <img src="./assets/images/logo.png" width="216" height="80" alt="keofi home" class="w-100">
         </a>
 
         <nav class="navbar" data-navbar>
@@ -290,10 +290,11 @@
           <ul class="grid-list" id="ulka1">
 
             <li>
+              <a href="armatura.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
-                  <img src="./assets/images/menu-1.jpg" style="width: 150px; height: 150px;" loading="lazy" alt="Americano Coffee"
+                  <img src="./assets/images/menu-1.jpg" style="width: 150px; height: 150px;" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -305,9 +306,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="krug.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -323,9 +326,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="katanka.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -342,9 +347,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="provoloka.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -360,9 +367,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="profiltruby.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -378,26 +387,12 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
+
             <li>
-              <div class="menu-card" data-reveal>
-
-                <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
-                  <img src="./assets/images/menu-6.jpg" style="width: 150px; height: 150px;"  loading="lazy" alt="Milk Cream Coffee"
-                    class="img-cover">
-                </figure>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title">Квадрат</h3>
-
-
-                </div>
-
-              </div>
-            </li>
-            <li>
+              <a href="prof.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -413,9 +408,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="list.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -431,9 +428,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="ugolok.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -449,9 +448,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="shveller.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -467,9 +468,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="balki.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -485,9 +488,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="setka.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -503,9 +508,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="polosa.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -521,9 +528,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="trubakrug.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -539,9 +548,11 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
             <li>
+              <a href="electrody.html">
               <div class="menu-card" data-reveal>
 
                 <figure class="card-banner img-holder" style="width: 200px; height:200px; background-color: white; display: flex; justify-content: center; align-items: center;">
@@ -557,6 +568,7 @@
                 </div>
 
               </div>
+              </a>
             </li>
 
 
@@ -916,7 +928,7 @@
           </li>
 
           <li>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1114.4974028086283!2d71.42198666431163!3d51.12546894956739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42458421ca936ed5%3A0x31c97d1af49d025b!2z0YPQuy4g0KHQsNGD0YDQsNC9IDEsINCQ0YHRgtCw0L3QsCAwMjAwMDA!5e0!3m2!1sru!2skz!4v1718597907039!5m2!1sru!2skz"  style="border:0;width: 100%; height: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1114.4974028086283!2d71.42198666431163!3d51.12546894956739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42458421ca936ed5%3A0x31c97d1af49d025b!2z0YPQuy4g0KHQsNGD0YDQsNC9IDEsINCQ0YHRgtCw0L3QsCAwMjAwMDA!5e0!3m2!1sru!2skz!4v1718597907039!5m2!1sru!2skz"  style="border:0; width: 100%; height: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </li>
 
         </ul>
