--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
         - #HERO
       -->
 
-      <section class="section hero has-bg-image" id="home" aria-labelledby="hero-label"
-        style="background-image: url('./assets/images/hero-banner.jpg'); background-size: cover ;">
+      <section class="section hero has-bg-image" id="home" aria-labelledby="hero-label">
         <div class="container">
 
           <p class="section-subtitle has-before reveal-left" data-reveal>Добро пожаловать в STSProm</p>
