--- a/balki.html
+++ b/balki.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
