--- a/electrody.html
+++ b/electrody.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -193,11 +196,7 @@
               Сварочные электроды – металлические стержни, которые используются для сварки. Такие электроды бывают различных видов и типов. В первую очередь сварочные электроды подразделяются на неметаллические электроды и металлические. Неметаллические сварочные электроды могут быть только неплавящиеся, например, графитовые или угольные.
               В свою очередь, металлические электроды могут быть как плавящиеся, так и неплавящиеся. К неплавящимся металлическим электродам относятся: торированные, итрированные, лантанированные, вольфрамовые электроды. Плавящиеся металлические электроды подразделяются на покрытые и непокрытые. К покрытым относятся: стальные, чугунные, медные, алюминиевые, бронзовые. Непокрытые сварочные электроды применялись на ранних стадиях развития. Как правило, сейчас они используются в виде проволоки для сварки в среде защитных газов.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
