--- a/katanka.html
+++ b/katanka.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -198,11 +201,7 @@
                     3. В станкостроении, для создания особо прочных, стойких на изгиб и к нагрузкам деталей и элементов.<br>
                     4. В других отраслях народного хозяйства, в том числе – в сфере народного потребления, быту, садоводстве, ремонтных работах.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
