--- a/list.html
+++ b/list.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -197,11 +200,7 @@
                 3. Автомобилестроение и машиностроение. Из листовой стали изготавливают полы, ступени, разного рода трапы и множество других деталей и конструктивных элементов.<br>
                 4. Производство предметов бытового назначения, инвентаря. В этой сфере используется преимущественно сталь, предварительно прошедшая специальную обработку – оцинковку. Из оцинкованной стали делают сельскохозяйственный инвентарь, различные емкости, предметы домашнего обихода, которые должны выдерживать активную эксплуатацию и многое другое.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
