--- a/prof.html
+++ b/prof.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -196,11 +199,7 @@
                 2. Малая масса обеспечивает простоту хранения и транспортировки оцинкованного профнастила.<br>
                 3. Особая форма в сочетании с оптимальным весом позволяет легко монтировать листы.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
