--- a/setka.html
+++ b/setka.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -195,11 +198,7 @@
               Назначение дорожной сетки полностью предопределило и ее название - такая сетка применяется при строительстве постоянных и временных дорог, а также для стяжки бетонных полов.
               Кладочная сетка имеет еще несколько областей применения.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
