--- a/shveller.html
+++ b/shveller.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -194,11 +197,7 @@
               Ввиду исключительных показателей жесткости и прочности применение швеллеров целесообразно в строительстве для придания дополнительной прочности и устойчивости конструкциям. Этот вид металлопроката используется в автомобилестроении, вагоностроении, при конструировании тяжелых габаритных промышленных машин.<br>
               Мы также предлагаем вам еще один тип металлического проката - листовая сталь , который является неотъемлемым компонентом во всех сферах строительства и машиностроения, также применяется при изготовлении сельскохозяйственного оборудования. <br>
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
