--- a/armatura.html
+++ b/armatura.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -197,11 +200,7 @@
               Аналогичным изделием является металлическая сетка, которая успешно применяется при строительстве зданий различного назначения, например, для армирования бетонных полов.
               Которую еще называют кладочная сетка, купить ее вы также можете через наш сайт.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
