--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
             <li>
               <a href="#blog" class="navbar-link" data-nav-link>Блог</a>
             </li>
-
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
           </ul>
@@ -147,7 +149,8 @@
         - #HERO
       -->
 
-      <section class="section hero has-bg-image" id="home" aria-labelledby="hero-label">
+      <section class="section hero has-bg-image" id="home" aria-labelledby="hero-label" style="background-image: url('./assets/images/banner-3.png');
+  background-size: cover;">
         <div class="container">
 
           <p class="section-subtitle has-before reveal-left" data-reveal>Добро пожаловать в STSProm</p>
@@ -825,7 +828,7 @@
           </div>
 
           <a href="https://api.whatsapp.com/send?phone=77055443110" class="btn btn-primary reveal-right" data-reveal>
-            <span class="span">Нажать</span>
+            <span class="span">Заказать</span>
 
             <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
           </a>
