--- a/polosa.html
+++ b/polosa.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -194,11 +197,7 @@
               Эта заготовка находит широкое применение в различных отраслях, включая архитектуру, приборостроение, машиностроение, производство режущих инструментов и строительство.
               Широкое применение продукция нашла в дизайне, из нее изготавливают гнущиеся перила, ограды, которым можно придать самые разные, даже очень сложные формы. Длина изделия доходит до 10 метров, продукт характеризуется длительным сроком службы, высокой прочностью, надежностью, устойчивостью к деформации.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
