--- a/profiltruby.html
+++ b/profiltruby.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -195,11 +198,7 @@
               Основная сфера применения металлопродукции – строительство. Профильные трубы выступают в роли опорных элементов, которые обеспечивают дополнительную жесткость и прочность конструкции. Также целесообразно их применение в качестве строительной арматуры для укрепления железобетонных балок и прочих элементов.<br>
               Кроме того, профильные квадратные и прямоугольные трубы применяются для изготовления плоских рам, а также для производства конструкций, требующих повышенных показателей сопротивления при плоском изгибе.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
