--- a/provoloka.html
+++ b/provoloka.html
@@ -105,6 +105,9 @@
             <li>
               <a href="index.html" class="navbar-link" data-nav-link>Главная</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1CkQpJQ45LMKt7wGER7mJgXi0gDWo0X7R/view" target="_blank" class="navbar-link" data-nav-link>Прайс лист</a>
+            </li>
 
 
 
@@ -196,11 +199,7 @@
               - по величине сечения материала и его геометрии;<br>
               - по классу прочности и иным критериям.
             </p>
-            <a href="#" class="btn btn-primary" data-reveal>
-              <span class="span">Цена</span>
 
-              <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
-            </a>
 
 
 
